<resources>
    <string name="app_name">ChefsNotes</string>
    <string name="create_recipe">Create Recipe</string>
    <string name="view_recipe">View Recipe</string>
    <string name="chefsnotes">ChefsNotes</string>
    <string name="logo">ChefsNotes Logo</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="directions">Directions</string>
    <string name="ingredients">Ingredients</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingredient">Ingredient</string>
    <string name="delete_button">Delete Button</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="fatalError">Fatal error</string>
    <string name="warning">Warning</string>

    <string name="padding">15dp</string>
    <string name="search_hint">Search by keywords…</string>
    <string name="toggleButton">ToggleButton</string>
    <string name="search_by_recipe_name">Search by recipe name</string>
    <string name="toggle_filter_text">Click a tag to toggle it as a search filter</string>
    <string name="browse_recipes">Browse Recipes</string>
    <string name="current_recipe">Current Recipe</string>
    <string name="new_recipe">New Recipe</string>
    <string name="save_recipe">Save Recipe</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="delete_direction">Delete Direction</string>
    <string name="direction_title">Direction Title</string>
    <string name="direction_description">Direction Description</string>
    <string name="ok">Yes</string>
    <string name="no">No</string>
    <string name="confirm_delete">Are you sure you want to delete this recipe?
        This cannot be undone.</string>
    <string name="search_mode_name">Search for any part of a recipe name</string>
    <string name="search_mode_ing">Separate multiple ingredients by semi-colons</string>
    <string name="camera_button">Camera</string>
    <string name="delete_recipe">Delete Recipe</string>
    <string name="add_direction">Add Direction</string>
    <string name="duplicate_recipe">Duplicate Recipe</string>
    <string name="edit">Edit</string>
    <string name="delete_photo">Delete Photo</string>
    <string name="home_page">Home</string>
    <string name="units">Units</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="search">Search By...</string>
</resources>
