<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/DirectionField"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:orientation="vertical"
    tools:showIn="@layout/recipe_editor">

    <RelativeLayout
        android:id="@+id/Direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        tools:ignore="UselessParent">

        <ImageButton
            android:id="@+id/DirectionDeleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/TimeEstimate"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="5dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/delete_direction"
            app:srcCompat="@drawable/delete_button" />

        <EditText
            android:id="@+id/DirectionName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            android:ems="10"
            android:hint="@string/direction_title"
            android:inputType="textPersonName"
            tools:imeOptions="actionDone"
            android:importantForAutofill="no" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textbox"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/DirectionName"
            android:layout_marginTop="32dp"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/direction_description"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>

        <EditText
            android:id="@+id/TimeEstimate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@id/DirectionDeleteButton"
            android:backgroundTint="#000000"
            android:hint="Time For Step (mins)"
            android:imeOptions="actionDone"
            android:inputType="number" />

    </RelativeLayout>

</TableRow>
