<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="serif"
            android:gravity="bottom|center_horizontal"
            android:paddingBottom="20dp"
            android:text="@string/chefsnotes"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#000"
            android:textSize="80sp"
            android:textStyle="italic"
            android:typeface="serif" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="210dp"
            android:layout_height="400dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logo"
            android:scaleX="2"
            android:scaleY="2"
            app:srcCompat="@drawable/chefsnotes_logo" />

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center">

            <Button
                android:id="@+id/CreateRecipeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="80dp"
                android:layout_marginBottom="20dp"
                android:minWidth="160dp"
                android:minHeight="60dip"
                android:onClick="makeRecipe"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:text="@string/create_recipe"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:typeface="serif"
                app:cornerRadius="20sp"
                app:layout_column="0"
                app:layout_gravity="center" />

            <Button
                android:id="@+id/BrowseRecipeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="80dp"
                android:layout_marginBottom="20dp"
                android:minWidth="160dp"
                android:minHeight="60dip"
                android:onClick="browseRecipes"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:text="@string/browse_recipes"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:typeface="serif"
                app:cornerRadius="20sp"
                app:layout_column="1"
                app:layout_gravity="center" />

        </androidx.gridlayout.widget.GridLayout>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_bottom" />

</androidx.constraintlayout.widget.ConstraintLayout>
